--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <div class="hero-content">
+                    <div class="hero-content"><br><br>
                         <h1>Empowering Agriculture Through Technology</h1>
                         <p>Connect farmers to markets, enable smart investments, and build sustainable agricultural communities across Nigeria.</p>
                         
